[gd_scene load_steps=4 format=2]

[ext_resource path="res://attacks/weapon_scripts/LightningRod.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/lightning_strike.wav" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1024, 600 )

[node name="LaserStrike" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CooldownTimer" type="Timer" parent="."]
autostart = true

[node name="Range" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 1 )

[node name="ThunderClap" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
